# CS23820-C-and-CPP

./: README.md
Worksheet 1/: Questions
Worksheet 1/FEATY0~B/: CMakeLists.txt  first  first.c  functions.c  functions.h
Worksheet 1/height/: CMakeLists.txt  height.c  height.h  main.c
Worksheet 2/: Questions.txt
Worksheet 2/Debug/: CMakeLists.txt  biggest.c  debug.h  main.c  multiply.c
Worksheet 2/Height_Loop/: CMakeLists.txt
Worksheet 3/: CMakeLists.txt  Questions.txt
Worksheet 4/: CMakeLists.txt  Questions.txt
Worksheet 5/: CMakeLists.txt  Questions.txt
Worksheet 6/: Questions.txt
Worksheet 6/recursive/: CMakeLists.txt  Date.cpp  Date.h  recursive.cpp
Worksheet 7/: Questions.txt
Worksheet 7/WorksheetFilesIO/: Book.cpp  Book.h  CMakeLists.txt  main.cpp  newBiblio.txt
Worksheet 7/employees/: CMakeLists.txt  Date.cpp  Date.h  Employee.cpp  Employee.h  Pension.cpp  Pension.h  main.cpp
Worksheet 8/Polygon/: CMakeLists.txt  Polygon.cpp  Polygon.h  Rectangle.cpp  Rectangle.h  Triangle.cpp  Triangle.h  main.cpp
Worksheet 8/__MACOSX/: ._datahiding
Worksheet 8/__MACOSX/datahiding/: ._Bat.cpp  ._Bat.h  ._Dog.cpp  ._Dog.h  ._Elk.cpp  ._Elk.h  ._Makefile  ._Mammal.cpp  ._Mammal.h  ._MammalCreator.cpp  ._MammalCreator.h  ._Polymorphism.cpp  ._TestDeepCopy.cpp
Worksheet 8/datahiding/: Bat.cpp  Bat.h  CMakeLists.txt  Dog.cpp  Dog.h  Elk.cpp  Elk.h  Mammal.cpp  Mammal.h  MammalCreator.cpp  MammalCreator.h  Polymorphism.cpp  TestDeepCopy.cpp
Worksheet 8/multipleinheritancesimple/: multiple_inheritance_simple.cpp
(+11 files in other folders)
